# Xiongan-Civilization-OS

./: COLLABORATION.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  check_installation.py  check_installation.py：  demo_did.py  direct_test.py  direct_test.py：  pyproject.toml  quick_test.py  run_tests.py  test_simple.py  verify_did.py  verify_now.py  verify_now.py：
docs/modules/: core_did.md
src/: __init__.py
src/core/: __init__.py  did.py：  exceptions.py
tests/unit/core/: test_did.py
