`toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xiongan-civilization-os"
version = "0.1.0"
description = "Xiongan Civilization Leap Operating System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your-email@example.com"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"xca" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
